--- a/08-appendix.Rmd
+++ b/08-appendix.Rmd
@@ -794,13 +794,14 @@ Table: (\#tab:contribution) **Contributions to individual publications**. Contri
 **Writing – Review & Editing:**            Preparation, creation and/or presentation of the published work by those from the original research group, specifically critical review, commentary or revision – including pre- or post-publication stages.                                                          30                                             50                                                 20                                      50
 ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
+
 # Acknowledgements {-}
 
-This work would not have been possible without the input from many wonderful colleagues and collaborators. 
+This work would not have been possible without the input from many amazing colleagues and collaborators. 
 First of all, I would like to thanks my supervisor Miguel Andrade. 
 Miguel not only let me work on this exciting topic and was always open to my ideas, but he also had constant trust and interest in my work. He provided useful feedback and brilliant ideas. I highly appreciate his contributions and writing in all the here presented publications. 
 
-All publications making up this thesis were collaborative efforts with significant contributions from other authors. I thank all of them for their contributions. I thank especially Jan Krefting for his comprehensive and detailed analysis of TADs in evolution. It was always a pleasure to discuss and work with him. 
+All publications making up this thesis were collaborative efforts with significant contributions from other authors. I thank all of them for their contributions. I am grateful especially to Jan Krefting for his comprehensive and detailed analysis of TADs in evolution. It was always a pleasure to discuss and work with him. 
 I would like to thank especially Cinthya Zepeda-Mendoza who did most of the analysis and writing in the position effect project. It was always a pleasure and great experience to work with her. I also thank Cynthia C. Morton and Nick Robinson for initializing this collaboration and their input. I appreciate the contribution of all DGAP subjects and their families to this and other research by providing their data.
 
 I thank the entire CBDM group at IMB and JGU Mainz, consisting of 
@@ -823,4 +824,5 @@ Furthermore, I thank Susanne Gerber for her interest and time to review my thesi
 I thank David Fournier for reading, correcting and commenting the thesis draft. 
 Moreover, I thank Dimitris Polychronopoulos for a great and inspiring time during a research-stay at MRC London.
 Last but not least, I would like to thank my partner in life, Marlien, for her motivation, her understanding, her patience, her endless support and her love. This work would have never finished without her. 
+
 
